--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fontsource/metal-mania": "^5.2.5",
     "@fontsource/roboto": "^5.2.5",
     "@tailwindcss/vite": "^4.0.9",
+    "lucide-react": "^0.477.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
